objects/GPO_Community_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used for GPO Communities</description>
    <fields>
        <fullName>Admin_ProfileId__c</fullName>
        <description>This contains the ID for the super user admin profile and used to display admin header</description>
        <label>Admin ProfileId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Guid__c</fullName>
        <label>Article Guid</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <label>Article URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSD_Homepage__c</fullName>
        <label>BSD Homepage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Group_Name__c</fullName>
        <label>Default Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Welcome_Message__c</fullName>
        <description>Communities v2: Generic Welcome Message shown on prelogin page.</description>
        <label>Generic Welcome Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Page__c</fullName>
        <label>Home Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <label>Image Path</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Alive_Interval__c</fullName>
        <label>Keep Alive Interval</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Alive_URL__c</fullName>
        <label>Keep Alive URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Page_Source__c</fullName>
        <label>Lead Page Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Page__c</fullName>
        <label>Member Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewsCred_URL__c</fullName>
        <label>NewsCred URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Connection__c</fullName>
        <label>SOA Connection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_EndPoint__c</fullName>
        <label>SOA EndPoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_User__c</fullName>
        <description>Communities v2</description>
        <inlineHelpText>Communities v2</inlineHelpText>
        <label>SOA User</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPC_Link_Address__c</fullName>
        <description>Communities v2: The link to the SPC Visualforce page</description>
        <inlineHelpText>Communities v2: The link to the SPC Visualforce page</inlineHelpText>
        <label>SPC Link Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPC_Registration_Link_URL__c</fullName>
        <description>Communities v2.2 - Holds the URL for the SPC registration form on BSD</description>
        <inlineHelpText>URL for the SPC registration form on BSD</inlineHelpText>
        <label>SPC Registration Link URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPC_Service_URL__c</fullName>
        <description>Communities v2.1 - The URL for SOA&apos;s SPC Card Number Service.</description>
        <inlineHelpText>Communities v2.1 - The URL for SOA&apos;s SPC Card Number Service.</inlineHelpText>
        <label>SPC Service URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceUser__c</fullName>
        <label>ServiceUser</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Insert__c</fullName>
        <description>In UAT, it is &apos;/gpo/&apos; ; In Prod, it is just &apos;/&apos;</description>
        <inlineHelpText>In UAT, it is &apos;/gpo/&apos; ; In Prod, it is just &apos;/&apos;</inlineHelpText>
        <label>URL Insert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ProfileId__c</fullName>
        <label>User ProfileId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <label>User Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>captcha_privateKey__c</fullName>
        <label>captcha privateKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>captcha_publicKey__c</fullName>
        <label>captcha publicKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defaultRecordType__c</fullName>
        <label>defaultRecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defaultTemplate__c</fullName>
        <label>defaultTemplate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enabled_group_recordtypeid__c</fullName>
        <label>enabled group recordtypeid</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>logout_link__c</fullName>
        <label>logout link</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfdc_domain__c</fullName>
        <label>sfdc domain</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shop_link__c</fullName>
        <label>shop link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signin_link__c</fullName>
        <label>signin link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GPO Community Setup</label>
</CustomObject>